--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,21 @@ body {
   font-size: 20px;
   ;
 }
+
 .center {
    text-align: center;
    color: red
+ }
+
+ img {
+   border: 4px solid blue;
+   padding: 2px;
+   margin-left: 10%;
+ }
+
+ p a {
+   color: blue;
+
  }
 
 #Java, #Ruby, #CSS, #default {
