place intro paragraph where user name changes separately from paragraphs describing options otherwise the user name does not update.

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,9 +18,11 @@ body {
 
  p a {
    color: blue;
-
+ }
+ .intro {
+   font-weight: bolder;
  }
 
-#Java, #Ruby, #CSS, #default {
+#Java, #Ruby, #CSS, #default, .intro {
   display: none;
 }
