--- a/css/styles.css
+++ b/css/styles.css
@@ -4,25 +4,22 @@ body {
   font-size: 20px;
   ;
 }
-
 .center {
    text-align: center;
    color: red
  }
-
  img {
    border: 4px solid blue;
    padding: 2px;
    margin-left: 10%;
  }
-
  p a {
    color: blue;
  }
- .intro {
+  .intro {
    font-weight: bolder;
+   background-color: yellow;
  }
-
-#Java, #Ruby, #CSS, #default, .intro {
+#Java, #Ruby, #CSS, #default, .intro, img {
   display: none;
 }
